--- a/Avatar_assignament1.ipynb
+++ b/Avatar_assignament1.ipynb
@@ -2171,6 +2171,13 @@
     "\n",
     "**These are the top three products mostly sold**"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "--------------------------------------END-------------------------------------------------"
+   ]
   }
  ],
  "metadata": {
